2022-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (TH): Clarify computation and diagnostic message.

2022-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Fix Savannah #61878.

	* src/preproc/tbl/table.cpp: Define new preprocessor macro,
	`STARTING_PAGE_REG`.
	(table::define_bottom_macro): Have the formatter issue a warning
	if an unkept, boxed table ends on a different page than it
	began.
	(table::do_top): Save current page number when table begins.

	Fixes <https://savannah.gnu.org/bugs/?61878>.

2022-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Regression-test Savannah #61878.

	* src/preproc/tbl/tests/\
	warn-on-long-boxed-unkept-table.sh: Do it.
	* src/preproc/tbl/tbl.am (tbl_TESTS): Run test.

2022-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/table.cpp: Write comments to generated output;
	these correspond to functions in this file and to major
	operations of table construction.
	(init_output, compute_widths, define_bottom_macro, do_row)
	(do_top, do_bottom): Do it.

2022-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename class `constant_int_reg` to
	`readonly_register`.  Say "readonly" instead of "const" to
	try to avoid confusion with C++ constness.  Drop "int" because
	integer-valued registers are the norm, not the exception.

	* src/roff/troff/column.cpp (init_column_requests):
	* src/roff/troff/div.cpp (init_div_requests):
	* src/roff/troff/input.cpp (top level, init_input_requests):
	* src/roff/troff/node.cpp (init_node_requests):
	* src/roff/troff/reg.h: Do it.

2022-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename class `constant_reg` to
	`readonly_text_register`.  Say "readonly" instead of "const" to
	try to avoid confusion with C++ constness.  Say "text" because
	this class is _mostly_ used for interpolation of string-valued